--- a/cordova-app/www/style-dashboard.css
+++ b/cordova-app/www/style-dashboard.css
@@ -1471,7 +1471,6 @@
 
   .dashboard-countdown {
     text-align: right;
-    min-width: 200px;
   }
 
   /* هاتف فقط: الرقاص يتوسط فوق الأرقام تلقائياً */
